src/client/styles/project-card.scss
@use "vars" as v;
@use "animation" as a;


.project-card {
  background-color: v.$colour-medium;
  margin: v.$padding*3 0;
  border-radius: v.$border-radius;
  @include v.shadow(8px);

  &-name,
  &-1,
  &-2 {
    padding: 0 v.$padding;
  }

  &-name {
    padding-top: (v.$padding * 2);

    h2 {
      margin: 0;
    }
  }

  &-2 {
    padding-bottom: (v.$padding * 2);
  }

  &-img {
    margin: v.$padding*2 auto;
    max-width: 600px;

    img {
      max-width: 100%;
      @include v.shadow(6px);
    }
  }

  &-buttons {
    display: flex;
    justify-content: space-around;
    width: 100%;

    a {
      text-decoration: none;
    }
  }

  &-button {
    $size: 4.0rem;
    width: $size;
    height: $size;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2.4rem;
    background-color: v.$colour-dark;
    color: v.$colour-lightest;
    @include v.shadow(6px);

    &:hover {
      @include a.fade(background-color, #555, v.$colour-highlight)
    }
  }

  &-tech {
    display: flex;
    flex-direction: row;
    flex-flow: wrap;

    &-icon {
      flex: 140px;
      display: flex;
      margin: 12px 6px;
      flex-direction: column;
      align-items: center;
      font-size: 1.2rem;
      text-align: center;

      i {
        font-size: 2.0rem;
      }
    }
  }
}


@media only screen and (min-width: v.$desktop-min-width) {

.project-card {
  display: grid;
  grid-template-rows: repeat(2, 1fr) fit-content;
  grid-template-columns: repeat(12, 1fr) max-content;
  background-color: unset;
  box-shadow: unset;

  &-name {
    grid-area: 1 / 1 / 1 / 6;
    display: flex;
    background-color: #555;
    clip-path: polygon(0 0, 92% 0%, 100% 100%, 0% 100%);
    border-radius: v.$border-radius 0 0 0;
    padding: 1.0rem;

    h2 {
      color: v.$colour-lightest;
    }
  }

  &-img {
    margin: 0;
    max-width: unset;
  }

  &-buttons {
    margin-top: v.$padding*2;
  }

  &-1,
  &-2 {
    background-color: v.$colour-medium;
    display: flex;
    flex-direction: column;
    justify-content: center;
    justify-content: space-around;
    align-items: center;
    padding: v.$padding*2;
    @include v.shadow(8px);
  }

  &-1 {
    grid-area: 2 / 1 / 2 / 7;
    border-radius:  0 0 0 v.$border-radius;
  }

  &-2 {
    grid-area: 2 / 7 / 2 / -1;
    border-radius:  0 v.$border-radius v.$border-radius 0;
  }
}

}  // @media

